Add PMD plugin and make necessary changes